ipad overflow mobile banner pic fixed

--- a/styles/_treatment.scss
+++ b/styles/_treatment.scss
@@ -127,6 +127,7 @@
       }
       @media screen and (max-width: 800px) {
         left: 256px;
+        overflow: hidden;
       }
       &.male{
         img {
